// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RawTextField component does not display rightAdornment if provided and error is true 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1w5v8j3-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
      >
        <div>
          rightAdornment
        </div>
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if error is true 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if errorText is populated 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-describedby="email-helper-text"
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-t5lzr8-MuiFormHelperText-root"
      id="email-helper-text"
    >
      errorText
    </p>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if helperText is populated 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-describedby="email-helper-text"
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-t5lzr8-MuiFormHelperText-root"
      id="email-helper-text"
    >
      helperText
    </p>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if isRequired is true 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if isTextArea is true 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if variant === hybrid 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-filled MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-filled css-1wb2lss-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-y462qo-MuiInputBase-root-MuiFilledInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly if variant === outlined 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1oq2j99-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly with leftAdornment 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root TextField-leftAdornment css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1w5v8j3-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
      >
        <div>
          leftAdornment
        </div>
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`RawTextField component renders correctly with rightAdornment 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-af3ul8-MuiFormControl-root-MuiTextField-root"
    data-testid="text-field-email"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-15zab3-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      for="email"
      id="email-label"
    >
      Email address
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1w5v8j3-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
        data-testid="text-field-email-input"
        id="email"
        name="Email"
        placeholder="e.g. lorem@ipsum.com"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
      >
        <div>
          rightAdornment
        </div>
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-yjsfm1"
        >
          <span>
            Email address
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
